# three-seconds

./: .gitignore  .pre-commit-config.yaml  README.md  dev.py  gen_prompt.py  preprocess.py  pyproject.toml  requirements.txt
data/HQc4E9hb7JQ/: zero_shot.txt
data/livestream_01/: zero_shot.txt
prompts/: segments.txt
requests/3ba6faa47650/3ba6faa47650_output/: readme.txt
requests/ab1eb82ea439/: zero_shot.txt
requests/ab1eb82ea439/ab1eb82ea439_output/: readme.txt
requests/f1b30aba5150/: zero_shot.txt
src/: .env.sample  main.py
src/embeddings/image/: engine.py
src/key_frames/: main.py
src/llm/: .env.sample  zero_shot.py
src/telegram/: bot.py
src/utils/: frames_extractor.py  gdrive.py  preprocess.py
